--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
-body {
-    background-color: brown;
+* {
+    margin: 0;
+    padding: 0;
+}
+ul {
+    list-style: none;
+}
+li {
+    line-height: 20px;
 }
